# yoshimi

./: meson.build
src/: CMakeLists.txt  main.cpp
src/DSP/: AnalogFilter.h
src/Effects/: Alienwah.cpp  Reverb.cpp  Reverb.h
src/Interface/: CmdInterface.cpp  FileMgr.cpp  InterChange.cpp  InterChange.h
src/LV2_Plugin/: YoshimiLV2Plugin.cpp  YoshimiLV2Plugin.h
src/Misc/: Config.cpp  Config.h  Microtonal.h  MiscFuncs.cpp  MiscFuncs.h  Part.h  SynthEngine.cpp  SynthEngine.h
src/MusicIO/: AlsaEngine.cpp  AlsaEngine.h  JackEngine.cpp  JackEngine.h  MusicClient.cpp  MusicClient.h
src/Params/: PADnoteParameters.cpp  PresetsStore.cpp  PresetsStore.h
src/Synth/: OscilGen.cpp  SUBnote.cpp  SUBnote.h
src/UI/: BankUI.fl  ConfigUI.fl  EffUI.fl  EnvelopeUI.fl  MasterUI.fl  MidiLearnUI.fl  PartUI.fl  PresetsUI.fl  VectorUI.fl  WidgetPDial.h
